--- a/txrx/templates/post_detail.html
+++ b/txrx/templates/post_detail.html
@@ -11,6 +11,8 @@
 
 {% block header %}{% endblock %}
 
+{% block head %}<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/pygments.css">{% endblock %}
+
 {% block content %}
 <div id="post-detail-page">
   <div class="row">
