--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -7,7 +7,13 @@
 
 {% block content %}
 <div class="page-header" style="margin: -10px 0 20px;">
-  <h1 class="home-tagline">{{ term.name }} Classes</h1>
+  <h1 class="home-tagline">
+    {{ term.name }} Classes
+    <div class="calendar_widget" style="display: inline-block; padding-left: 50px; font-size:0.7em;">
+      (<a href="javascript:;" onclick="$('.add_to_calendar').toggle()">Subscribe to calendar</a>)
+      {% include "event/_subscribe_to_calendar.html" with calendar_event=occurrence %}
+    </div>
+  </h1>
 </div>
 {% comment %}
 {% if "success" in request.GET %}
