adding bi-weekly and tri-weeekly repeat

--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -21,9 +21,15 @@ Events at TX/RX
     <tr style="font-size: 12px;text-align: center;">
       <td></td>
       <td></td>
-      <td class="event"><span class="m">Monthly event</span></td>
-      <td class="event"><span class="w">Weekly event</span></td>
-      <td class="event"><span class="c">Class session</span></td>
+      <td class="event">
+        <p class="m">Monthly event</p>
+        <p class="b">Bi-Monthly event</p>
+      </td>
+      <td class="event">
+        <p class="w">Weekly event</p>
+        <p class="t">Tri-Weekly event</p>
+      </td>
+      <td class="event"><p class="c">Class session</p></td>
     </tr>
     {% for week in weeks %}
     <tr>
