--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -239,7 +239,7 @@ h3.date {
     width: 135px;
   }
   .event {
-    .m, .c, .w {
+    .m, .c, .w, .t, .b {
       display: inline-block;
       padding-left: 19px;
       position: relative;
@@ -261,6 +261,8 @@ h3.date {
     .m:before { background-color: @yellow; content: "M"; }
     .c:before { background-color: @blue; content: "C"; }
     .w:before { background-color: @green; content: "W"; }
+    .t:before { background-color: @red; content: "T"; }
+    .b:before { background-color: @grayLight; content: "B"; }
   }
   td.event { line-height: 13px; }
 }
