--- a/txrx/templates/comments/display_comments_toplevel.html
+++ b/txrx/templates/comments/display_comments_toplevel.html
@@ -25,7 +25,7 @@
     {% include "comments/form.html" %}
   </div>
   {% else %}
-  Please <a href="/login?next={{ request.path }}">login or register</a> to comment.
+  Please <a href="/accounts/login?next={{ request.path }}">login or register</a> to comment.
   {% endif %}
 </div> 
 
