--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -1,5 +1,9 @@
 @import "bs/variables.less";
 
+.wmd-panel {margin: 0; }
+section { padding-bottom: 25px; }
+.comment:target > .comment_outer { background-color: @successBackground; }
+
 .floatingBox {
   background: white;
   border-radius: 5px;
