--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -4,32 +4,7 @@
   <head>
     <title>{% block full_title %}{% block title %}{% endblock %} - {{ SITE_NAME }}{% endblock %}</title>
     {% block extra_head %}{% endblock %}
-    {% compress css %}
-    {# all styling is kept in the less directory. This see the import file here. #}
-    <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/default.less">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/codrspace.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}mptt_comments/css/mptt_comments.css" />
-    <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
-    {% if request.theme == "dark" %}
-    <style type="text/css">
-      html, iframe, frame
-      {-webkit-filter: invert(.95) hue-rotate(180deg) !important;filter: invert(100%) hue-rotate(180deg) !important}
-
-      img,embed[flashvars],*[type*="application/x-shockwave-flash"],*[type*="application/x-silverlight"],[type=image]
-      {-webkit-filter: invert(.95) hue-rotate(180deg) !important;filter: invert(1) hue-rotate(180deg) !important}
-
-@-moz-document url-prefix(http://), url-prefix(https://), url-prefix(file://) {
-      *{ color: #999999 !important; background: #151515 !important; border-color: #333333 !important; }
-      * { text-shadow: none !important; }
-      a,a *{ color: #6666BB !important; text-decoration: none !important; }
-      a:hover, a:hover *{ color: #55AAAA !important; }
-      a:visited, a:visited *{ color: #884488 !important; }
-      a:visited:hover, a:visited:hover *{ color: #55AAAA !important; }
-}
-    </style>
-    {% endif %}
-    {% endcompress %}
+    {% include "_styles.html" %}
     <script type="text/javascript">
       _NOTIFY_URL = "http://txrxlabs.org/tx/rx/ipn/handler/"
     </script>
