compressing more javascript

--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -53,7 +53,7 @@
       </footer>
       {% endblock %}
     </div>
-    {% script compress js %}
+    {% compress js %}
     <script type="text/javascript" src="{{ STATIC_URL }}bootstrap-tooltip.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-collapse.js"></script>
