--- a/txrx/templates/_styles.html
+++ b/txrx/templates/_styles.html
@@ -10,7 +10,7 @@
 {% if settings.DEBUG %}
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
 <script>less = { env: 'development' };</script>
-<script src="{{ STATIC_URL }}js/less.js"></script>
+{% compress js %}<script src="{{ STATIC_URL }}js/less.js"></script>{% endcompress %}
 {% else %}
 {% compress css %}
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
