--- a/txrx/templates/widgets/filters.html
+++ b/txrx/templates/widgets/filters.html
@@ -8,7 +8,7 @@
   {% if not all_sessions_closed %}
   <span>
     <input id="show_closed" type="checkbox" onchange="toggleClosed(this);" />
-    <label for="show_closed">Show Closed Sections</label>
+    <label for="show_closed">Show Passed Sections</label>
     <script type="text/javascript">
       $(document).ready(function() { $("#show_closed").change() });
     </script>
