disabling comments until I can get a bug fixed

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -64,7 +64,7 @@
       {% endif %}
     </div>
     <div style="clear: both;"></div>
-    {% display_comment_toplevel_for session %}
+    {# {% display_comment_toplevel_for session %} #}
   </div>
 </div>
 {% endblock %}
