new comment system

--- a/txrx/templates/comments/display_comment.html
+++ b/txrx/templates/comments/display_comment.html
@@ -28,10 +28,6 @@
       {% endblock %}
     </div>
   </div>
-  {% with template="comments/display_comment.html" %}
-  {% for child in comment.children.all %}
-  {% include template with comment=child %}
-  {% endfor %}
-  {% endwith %}
+  {{ child_comments|safe }}
 </div>
 {% endwith %}
