--- a/txrx/templates/comments/display_comments_toplevel.html
+++ b/txrx/templates/comments/display_comments_toplevel.html
@@ -2,16 +2,12 @@
 {% load mptt_comments_tags %}
 
 <div id="comments">
-  {% get_mptt_comment_list for object as comments %}
-  
   {% if comments %}
   <h2>{% trans "Comments" %}</h2>
   {% endif %}
   
   <div id="mptt-comments-tree" class="block-comments-tree">
-    {% if comments %}
-    {% include "comments/display_comments_tree.html" %}    
-    {% endif %}
+    {{ comments_html|safe }}
   </div>
   
   {% include "comments/_comments_remaining.html" %}
