--- a/txrx/templates/comments/new_form.html
+++ b/txrx/templates/comments/new_form.html
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block content %}
-    {% include "comments/form.html" %}
+    {% include "comments/form.html" with warn=1 %}
 {% endblock content %}
