--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.pjax.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jsi18n.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/dead_pixel.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     {% endcompress %}
     {% block head %}{% endblock %}
