--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -41,3 +41,12 @@
 {% include "_post_content.html" with truncate_posts="True" %}
 {% endfor %}
 {% endblock %}
+<div class="paginator">
+  {% if paginator.has_previous %}
+  <a class="left" href="?{{ paginator.previous_qs }}">&lt; Previous</a>
+  {% endif %}
+  Page {{ paginator.number }}
+  {% if paginator.has_next %}
+  <a class="right" href="?{{ paginator.next_qs }}">Next &gt;</a>
+  {% endif %}
+</div>
