adding title/header to registration page

--- a/txrx/templates/registration/login.html
+++ b/txrx/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
 
 {% block title %}Login{% endblock %}
 {% block header_content %}Please Login to Continue{% endblock %}
