--- a/txrx/templates/registration/registration_form.html
+++ b/txrx/templates/registration/registration_form.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-
-{% block title %}Register{% endblock %}
-{% block header_content %}Register{% endblock %}
+{% extends "registration/base.html" %}
 
 {% block content %}
 <form method="POST">
