--- a/course/templates/course/course_totals.html
+++ b/course/templates/course/course_totals.html
@@ -2,11 +2,10 @@
 
 {% block main %}
 <table>
-  {% for session,money,attendance in course_tuples %}
-  {% ifchanged session.section.term %}
+  {% for term_dict in term_list %}
   {% if not forloop.first %}<tr><th colspan="4">---------------</th></tr>{% endif %}
   <tr>
-    <th colspan="4">{{ session.section.term }}</th>
+    <th colspan="4">{{ term_dict.term }}</th>
   </tr>
   <tr>
     <th>date</th>
@@ -14,13 +13,19 @@
     <th>money</th>
     <th>attendance</th>
   </tr>
-  {% endifchanged %}
+  {% for session,totals in term_dict.sessions.items %}
   <tr>
     <td>{{ session.first_date|date:"Y/m/d" }}</td>
     <td>{{ session.section.course }}</td>
-    <td>{{ money }}</td>
-    <td>{{ attendance }}</td>
+    <td>{{ totals.money }}</td>
+    <td>{{ totals.attendance }}</td>
   </tr>
   {% endfor %}
+  <tr>
+    <th></th>
+    <th></th>
+    <th>{{ term_dict.money }}</th>
+    <th>{{ term_dict.attendance }}</th>
+    {% endfor %}
 </table>
 {% endblock %}
