--- a/membership/templates/membership/minutes.html
+++ b/membership/templates/membership/minutes.html
@@ -9,7 +9,7 @@
 {% for proposal in minutes.proposal_set.all %}
 <div class="well">
   <h3>{{ proposal.order }}</h3>
-  {{ proposal.final_text }}
+  {{ proposal.final_text|explosivo }}
 </div>
 {% endfor %}
 {% endblock %}
