--- a/membership/templates/membership/minutes.html
+++ b/membership/templates/membership/minutes.html
@@ -8,7 +8,7 @@
 <div class="well">{{ minutes.content|explosivo }}</div>
 {% for proposal in minutes.proposal_set.all %}
 <div class="well">
-  <h3>{{ proposal.order }}</h3>
+  <h3>{{ proposal }}</h3>
   {{ proposal.final_text|explosivo }}
 </div>
 {% endfor %}
