saving changes so that I can try a different approach to evaluations

--- a/course/templates/course/evaluation_form.html
+++ b/course/templates/course/evaluation_form.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block full_title %}Course Evaluation{% endblock %}
+{% block header_content %}
+Evaluate {{ enrollment.session.section.course }} ({{ enrollment.session.first_date }})
+{% endblock %}
+
 {% block content %}
 <form action="." method="POST" class="evaluation_form">
   {% csrf_token %}
