--- a/course/templates/course/evaluations.html
+++ b/course/templates/course/evaluations.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load url from future %}
 
+{% block full_title %}Pending Evaluations{% endblock %}
+{% block header_content %}Pending Evaluations{% endblock %}
+
 {% block content %}
 <ul>
   {% for enrollment in enrollments %}
