--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -22,7 +22,7 @@
       var f = new Favico({
         animation : 'popFade'
       });
-      f.badge({{ p_evaluations.count }});
+      f.badge({{ pending_evaluations.count }});
     </script>
     {% block head %}{% endblock %}
     <!--[if lt IE 9]>
