--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -40,7 +40,11 @@
         <ul class="nav pull-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              {% if not user.is_authenticated or not pending_evaluations %}
               <i class="icon-user"></i>
+              {% else %}
+              <a data-reddot="{{ pending_evaluations.count }}"></a>
+              {% endif %}
               {% if user.is_authenticated %}
               {{ user.username }}
               {{ user_notifications.count }}
