--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -374,14 +374,16 @@ h3.date {
     color: white;
     content: attr(data-reddot);
     display: inline-block;
-    font-family: Arial;
-    font-size: 10px;
-    height: 14px;
-    line-height: 14px;
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    height: 16px;
+    line-height: 16px;
+    margin-left: -1px;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
-    width: 14px;
+    width: 16px;
   }
 }
 
