--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -43,7 +43,7 @@
               {% if not user.is_authenticated or not pending_evaluations %}
               <i class="icon-user"></i>
               {% else %}
-              <a data-reddot="{{ pending_evaluations.count }}"></a>
+              <span data-reddot="{{ pending_evaluations.count }}"></span>
               {% endif %}
               {% if user.is_authenticated %}
               {{ user.username }}
