--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -3,6 +3,8 @@
   ENROLLED
   {% elif session.closed %}
   {{ session.closed_string }}
+  {% elif session.full %}
+  FULL
   {% else %}
   <a class="btn btn-success add" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();">{% if session.in_progress %}In Progress{% else %}Enroll{% endif %} ${{ session.section.fee }}</a>
   <a class="btn btn-danger drop" href="javascript:simpleCart.remove('{{ session.id }}'); toggleCourses();">Drop ${{ session.section.fee }}</a>
