--- a/txrx/templates/email/welcome_classes.html
+++ b/txrx/templates/email/welcome_classes.html
@@ -7,6 +7,8 @@
 {% endblock %}
 {% trans "Your username has been automatically set to your email address:" %} {{ user.username }}
 
+{% trans "After you login you can change your username or choose an alternate email to associate with this account. You can also change your email preferences (for instance, you should receive a reminder the day before your class)." %}
+
 {% trans "Thank you and we hope to see you soon!" %}
 
 TX/RX Labs
