adding more email stuff

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -48,8 +48,10 @@
     {% for session in week.sessions %}
     {% include "course/_session_row.html" %}
     {% endfor %}
-    {% if request.user.is_superuser and forloop.last %}
+    {% if forloop.last %}
+    {% if request.user.is_superuser or 'test' in request.GET %}
     {% include "course/_session_row.html" with session=test_session %}
+    {% endif %}
     {% endif %}
   </table>
 </div>
