--- a/membership/templates/membership/settings.html
+++ b/membership/templates/membership/settings.html
@@ -3,7 +3,7 @@
 {% block full_title %}Settings - {{ SITE_NAME }}{% endblock %}
 {% block header_content %}Edit your account settings{% endblock %}
 
-{% block content %}
+{% block main %}
 <form method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <table class="table">
