new email optout system

--- a/txrx/templates/registration/activation_complete.html
+++ b/txrx/templates/registration/activation_complete.html
@@ -3,6 +3,9 @@
 {% block content %}
 <p>
   You have successfully registered.
-  Please click login in the top right corner to log in to the lab.
+  Please <a href="/accounts/login/">login in</a>.
 </p>
+{% if request.user.is_authenticated %}
+<script>window.location="/"</script>
+{% endif %}
 {% endblock %}
