adding markdown to comments

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -328,6 +328,14 @@ h3.date {
   }
 }
 
+.comment_form .md {
+  display: none;
+  margin-bottom: 20px;
+  &.show { display: block; }
+  tr { border: 1px gray solid; border-left: 0; }
+  td { border-left: 1px gray solid; }
+}
+
 .photorow :target {
   position: relative;
   &:after {
